--- a/index.html
+++ b/index.html
@@ -11,30 +11,33 @@
 </head>
 <body>
 	<header>
-		<nav>
-			<a href="index.html"><span>Web</span>Studio</a>
-			<ul>
-				<li>Студия</li>
-				<li>Портфолио</li>
-				<li>Контакты</li>
+		<nav class="navigation">
+			<a href="index.html" class="logo link"><span class="logo__first-part">Web</span>Studio</a>
+			<ul class="navigation-list list">
+				<li class="navigation-list__item">
+					<a href="#" class="navigation-list__link link current">Студия</a> 
+				</li>
+				<li class="navigation-list__item">
+					<a href="#" class="navigation-list__link link">Портфолио</a> 
+				</li>
+				<li class="navigation-list__item">
+					<a href="#" class="navigation-list__link link">Контакты</a> 
+				</li>
 			</ul>
 		</nav>
-		<ul>
-			<li>
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+		<ul class="header-contacts list">
+			<li class="header-contacts__item">
+				<a href="mailto:info@devstudio.com" class="header-contacts__link link">info@devstudio.com</a>
 			</li>
-			<li>
-				<a href="tel:+380961111111"> +38 096 111 11 11</a>
+			<li class="header-contacts__item">
+				<a href="tel:+380961111111" class="header-contacts__link link"> +38 096 111 11 11</a>
 			</li>
 		</ul>
 	</header>
-	<div>
-		<section>
-			<h1>Эффективные решения для вашего бизнеса</h1>
-			<button type="button">Заказать услугу</button>
-			<!--<a href="#">Заказать услугу</a>-->
-		</section>
-	</div>
+	<section class="hero">
+			<h1 class="hero__header">Эффективные решения для вашего бизнеса</h1>
+			<button type="button" class="hero__button">Заказать услугу</button>
+	</section>
 	<main>
 		<section>
 			<h2>Наши принципы</h2> <!--Будет скрыто -->
