--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
 			<button type="button" class="hero__button">Заказать услугу</button>
 	</section>
 	<main>
-		<section>
-			<h2>Наши принципы</h2> <!--Будет скрыто -->
-			<ul>
-				<li>
-					<h3>Внимание к деталям</h3>
-					<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+		<section class="principles">
+			<h2 class="principles__header primary-header">Наши принципы</h2>
+			<ul class="principles-list list">
+				<li class="principles-list__item">
+					<h3 class="principles__secondary-header">Внимание к деталям</h3>
+					<p class="principles__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 				</li>
-				<li>
-					<h3>Пунктуальность</h3>
-					<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+				<li class="principles-list__item">
+					<h3 class="principles__secondary-header">Пунктуальность</h3>
+					<p class="principles__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 				</li>
-				<li>
-					<h3>Планирование</h3>
-					<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+				<li class="principles-list__item">
+					<h3 class="principles__secondary-header">Планирование</h3>
+					<p class="principles__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 				</li>
-				<li>
-					<h3>Современные технологии</h3>
-					<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+				<li class="principles-list__item">
+					<h3 class="principles__secondary-header">Современные технологии</h3>
+					<p class="principles__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 				</li>
 			</ul>
 		</section>
