--- a/index.html
+++ b/index.html
@@ -60,51 +60,58 @@
 				</li>
 			</ul>
 		</section>
-		<section>
-			<h2>Чем мы занимаемся</h2>
-			<ul>
-				<li><img src="./images/img1.png" width="270" alt="coding"></li>
-				<li><img src="./images/img2.png" width="270" alt="mobile development"></li>
-				<li><img src="./images/img3.png" width="270" alt="tablet development"></li>
+		<section class="about">
+			<h2 class="primary-header">Чем мы занимаемся</h2>
+			<ul class="img-list list">
+				<li class="img-list__item"> 
+					<img src="./images/img1.png" class="img-list__img" width="370" alt="coding">
+				</li>
+				<li class="img-list__item">
+					<img src="./images/img2.png" class="img-list__img" width="370" alt="mobile development">
+				</li>
+				<li class="img-list__item">
+					<img src="./images/img3.png" class="img-list__img" width="370" alt="tablet development">
+				</li>
 			</ul>
 		</section>
-		<section>
-			<h2>Наша команда</h2>
-			<ul>
-				<li>
-					<img src="./images/Igor.jpg" width="270" alt="man">
-					<h3>Игорь Демьяненко</h3>
-					<p>Product Designer</p>
+		<section class="team">
+			<h2 class="primary-header">Наша команда</h2>
+			<ul class="team-list list">
+				<li class="team-list__item">
+					<img src="./images/Igor.jpg" class="team-list__img" width="270" alt="man">
+					<h3 class="team-list__header">Игорь Демьяненко</h3>
+					<p class="team-list__text">Product Designer</p>
 				</li>
-				<li>
-					<img src="./images/Olga.jpg" width="270" alt="woman">
-					<h3>Ольга Репина</h3>
-					<p>Frontend Developer</p>
+				<li class="team-list__item">
+					<img src="./images/Olga.jpg" class="team-list__img" width="270" alt="woman">
+					<h3 class="team-list__header">Ольга Репина</h3>
+					<p class="team-list__text">Frontend Developer</p>
 				</li>
-				<li>
-					<img src="./images/Nikolai.jpg" width="270" alt="man">
-					<h3>Николай Тарасов</h3>
-					<p>Marketing</p>
+				<li class="team-list__item">
+					<img src="./images/Nikolai.jpg" class="team-list__img" width="270" alt="man">
+					<h3 class="team-list__header">Николай Тарасов</h3>
+					<p class="team-list__text">Marketing</p>
 				</li>
-				<li>
-					<img src="./images/Mihail.jpg" width="270" alt="man">
-					<h3>Михаил Ермаков</h3>
-					<p>UI Designer</p>
+				<li class="team-list__item">
+					<img src="./images/Mihail.jpg" class="team-list__img" width="270" alt="man">
+					<h3 class="team-list__header">Михаил Ермаков</h3>
+					<p class="team-list__text">UI Designer</p>
 				</li>
 			</ul>
 		</section>
 	</main>
 	<footer>
-		<a href="index.html"><span>Web</span>Studio</a>
+		<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
 		<address>
-			<ul>
-				<li>
-					<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
-				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+			<ul class="address-list list">
+				<li class="address-list__item">
+					<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" class="address-list__link link addr" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
 				</li>
-				<li>
-					<a href="tel:+380961111111"> +38 096 111 11 11</a>
+				<li class="address-list__item">
+					<a href="mailto:info@devstudio.com" class="address-list__link link">info@devstudio.com</a>
+				</li>
+				<li class="address-list__item">
+					<a href="tel:+380961111111" class="address-list__link link"> +38 096 111 11 11</a>
 				</li>
 			</ul>
 		</address>
