--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			<a href="index.html" class="logo link"><span class="logo__first-part">Web</span>Studio</a>
 			<ul class="navigation-list list">
 				<li class="navigation-list__item">
-					<a href="#" class="navigation-list__link link current">Студия</a> 
+					<a href="index.html" class="navigation-list__link link current">Студия</a> 
 				</li>
 				<li class="navigation-list__item">
-					<a href="#" class="navigation-list__link link">Портфолио</a> 
+					<a href="portfolio.html" class="navigation-list__link link">Портфолио</a> 
 				</li>
 				<li class="navigation-list__item">
 					<a href="#" class="navigation-list__link link">Контакты</a> 
@@ -64,13 +64,13 @@
 			<h2 class="primary-header">Чем мы занимаемся</h2>
 			<ul class="img-list list">
 				<li class="img-list__item"> 
-					<img src="./images/img1.png" class="img-list__img" width="370" alt="coding">
+					<img src="./images/index/img1.png" class="img-list__img" width="370" alt="coding">
 				</li>
 				<li class="img-list__item">
-					<img src="./images/img2.png" class="img-list__img" width="370" alt="mobile development">
+					<img src="./images/index/img2.png" class="img-list__img" width="370" alt="mobile development">
 				</li>
 				<li class="img-list__item">
-					<img src="./images/img3.png" class="img-list__img" width="370" alt="tablet development">
+					<img src="./images/index/img3.png" class="img-list__img" width="370" alt="tablet development">
 				</li>
 			</ul>
 		</section>
@@ -78,22 +78,22 @@
 			<h2 class="primary-header">Наша команда</h2>
 			<ul class="team-list list">
 				<li class="team-list__item">
-					<img src="./images/Igor.jpg" class="team-list__img" width="270" alt="man">
+					<img src="./images/index/Igor.jpg" class="team-list__img" width="270" alt="man">
 					<h3 class="team-list__header">Игорь Демьяненко</h3>
 					<p class="team-list__text">Product Designer</p>
 				</li>
 				<li class="team-list__item">
-					<img src="./images/Olga.jpg" class="team-list__img" width="270" alt="woman">
+					<img src="./images/index/Olga.jpg" class="team-list__img" width="270" alt="woman">
 					<h3 class="team-list__header">Ольга Репина</h3>
 					<p class="team-list__text">Frontend Developer</p>
 				</li>
 				<li class="team-list__item">
-					<img src="./images/Nikolai.jpg" class="team-list__img" width="270" alt="man">
+					<img src="./images/index/Nikolai.jpg" class="team-list__img" width="270" alt="man">
 					<h3 class="team-list__header">Николай Тарасов</h3>
 					<p class="team-list__text">Marketing</p>
 				</li>
 				<li class="team-list__item">
-					<img src="./images/Mihail.jpg" class="team-list__img" width="270" alt="man">
+					<img src="./images/index/Mihail.jpg" class="team-list__img" width="270" alt="man">
 					<h3 class="team-list__header">Михаил Ермаков</h3>
 					<p class="team-list__text">UI Designer</p>
 				</li>
