--- a/portfolio.html
+++ b/portfolio.html
@@ -12,13 +12,13 @@
 <body>
 	<header>
 		<nav class="navigation">
-			<a href="index.html" class="logo link"><span class="logo__first-part">Web</span>Studio</a>
+			<a href="portfolio.html" class="logo link"><span class="logo__first-part">Web</span>Studio</a>
 			<ul class="navigation-list list">
 				<li class="navigation-list__item">
-					<a href="#" class="navigation-list__link link ">Студия</a> 
+					<a href="index.html" class="navigation-list__link link ">Студия</a> 
 				</li>
 				<li class="navigation-list__item">
-					<a href="#" class="navigation-list__link link current">Портфолио</a> 
+					<a href="portfolio.html" class="navigation-list__link link current">Портфолио</a> 
 				</li>
 				<li class="navigation-list__item">
 					<a href="#" class="navigation-list__link link">Контакты</a> 
@@ -34,9 +34,75 @@
 			</li>
 		</ul>
 	</header>
-	
-
-
+	<main>
+		<section class="main-section">
+			<h1 class="main-section__header">Наши проекты</h1><!--скрытый заголовок-->
+			<ul class="filter-list list">
+				<li class="filter-list__item">
+					<button type="button" class="filter-list__button">Все</button>
+				</li>
+				<li class="filter-list__item">
+					<button type="button" class="filter-list__button">Веб-сайты</button>
+				</li>
+				<li class="filter-list__item">
+					<button type="button" class="filter-list__button">Приложения</button>
+				</li>
+				<li class="filter-list__item">
+					<button type="button" class="filter-list__button">Дизайн</button>
+				</li>
+				<li class="filter-list__item">
+					<button type="button" class="filter-list__button">Маркетинг</button>
+				</li>
+			</ul>
+			<ul class="projects-list list">
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img1.jpg" width="370" alt="laptop">
+					<h2 class="projects-list__header">Технокряк</h2>
+					<p class="projects-list__text">Веб-сайт</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img2.jpg" width="370" alt="basketball">
+					<h2 class="projects-list__header">Постер New Orlean vs Golden Star</h2>
+					<p class="projects-list__text">Дизайн</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img3.jpg" width="370" alt="restaurant_logo">
+					<h2 class="projects-list__header">Ресторан Seafood</h2>
+					<p class="projects-list__text">Приложение</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img4.jpg" width="370" alt="headphones">
+					<h2 class="projects-list__header">Проект Prime</h2>
+					<p class="projects-list__text">Маркетинг</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img5.jpg" width="370" alt="boxes">
+					<h2 class="projects-list__header">Проект Boxes</h2>
+					<p class="projects-list__text">Приложение</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img6.jpg" width="370" alt="monitor">
+					<h2 class="projects-list__header">Inspiration has no Borders</h2>
+					<p class="projects-list__text">Веб-сайт</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img7.jpg" width="370" alt="book">
+					<h2 class="projects-list__header">Издание Limited Edition</h2>
+					<p class="projects-list__text">Дизайн</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img8.jpg" width="370" alt="label">
+					<h2 class="projects-list__header">Проект LAB</h2>
+					<p class="projects-list__text">Маркетинг</p>
+				</li>
+				<li class="projects-list__item">
+					<img src="./images/portfolio/img9.jpg" width="370" alt="laptop">
+					<h2 class="projects-list__header">Growing Business</h2>
+					<p class="projects-list__text">Приложение</p>
+				</li>
+			</ul>
+		</section>
+	</main>
 	<footer>
 		<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
 		<address>
