--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 			<h2 class="primary-header">Чем мы занимаемся</h2>
 			<ul class="img-list list">
 				<li class="img-list__item"> 
-					<img src="./images/index/img1.png" class="img-list__img" width="370" alt="coding">
+					<img src="./images/index/img1.jpg" class="img-list__img" width="370" alt="coding">
 				</li>
 				<li class="img-list__item">
-					<img src="./images/index/img2.png" class="img-list__img" width="370" alt="mobile development">
+					<img src="./images/index/img2.jpg" class="img-list__img" width="370" alt="mobile development">
 				</li>
 				<li class="img-list__item">
-					<img src="./images/index/img3.png" class="img-list__img" width="370" alt="tablet development">
+					<img src="./images/index/img3.jpg" class="img-list__img" width="370" alt="tablet development">
 				</li>
 			</ul>
 		</section>
