added hidden headers

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</section>
 	<main>
 		<section class="principles">
-			<h2 class="principles__header primary-header">Наши принципы</h2>
+			<h2 class="principles__header primary-header">Наши принципы</h2><!--скрытый заголовок-->
 			<ul class="principles-list list">
 				<li class="principles-list__item">
 					<h3 class="principles__secondary-header">Внимание к деталям</h3>
