--- a/index.html
+++ b/index.html
@@ -36,16 +36,14 @@
 			</ul>
 		</div>
 	</header>
-	<section class="hero">
-		<div class="wrap flex-container hero-wrap">
+	<section class="hero wrap flex-container">
 			<h1 class="hero__header">Эффективные решения для вашего бизнеса</h1>
 			<button type="button" class="hero__button">Заказать услугу</button>
-		</div>	
 	</section>
 	<main>
-		<section class="principles">
+		<section class="principles wrap">
 			<h2 class="principles__header primary-header">Наши принципы</h2><!--скрытый заголовок-->
-			<ul class="principles-list list">
+			<ul class="principles-list list flex-container">
 				<li class="principles-list__item">
 					<h3 class="principles__secondary-header">Внимание к деталям</h3>
 					<p class="principles__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -64,9 +62,9 @@
 				</li>
 			</ul>
 		</section>
-		<section class="about">
+		<section class="about wrap">
 			<h2 class="primary-header">Чем мы занимаемся</h2>
-			<ul class="img-list list">
+			<ul class="img-list list flex-container">
 				<li class="img-list__item"> 
 					<img src="./images/index/img1.jpg" class="img-list__img" width="370" alt="coding">
 				</li>
@@ -80,45 +78,57 @@
 		</section>
 		<section class="team">
 			<h2 class="primary-header">Наша команда</h2>
-			<ul class="team-list list">
-				<li class="team-list__item">
-					<img src="./images/index/Igor.jpg" class="team-list__img" width="270" alt="man">
-					<h3 class="team-list__header">Игорь Демьяненко</h3>
-					<p class="team-list__text">Product Designer</p>
-				</li>
-				<li class="team-list__item">
-					<img src="./images/index/Olga.jpg" class="team-list__img" width="270" alt="woman">
-					<h3 class="team-list__header">Ольга Репина</h3>
-					<p class="team-list__text">Frontend Developer</p>
-				</li>
-				<li class="team-list__item">
-					<img src="./images/index/Nikolai.jpg" class="team-list__img" width="270" alt="man">
-					<h3 class="team-list__header">Николай Тарасов</h3>
-					<p class="team-list__text">Marketing</p>
-				</li>
-				<li class="team-list__item">
-					<img src="./images/index/Mihail.jpg" class="team-list__img" width="270" alt="man">
-					<h3 class="team-list__header">Михаил Ермаков</h3>
-					<p class="team-list__text">UI Designer</p>
-				</li>
-			</ul>
+			<div class="team-list-wrap wrap">
+				<ul class="team-list list flex-container">
+					<li class="team-list__item">
+						<img src="./images/index/Igor.jpg" class="team-list__img" width="270" alt="man">
+						<div class="team-list__wrapper">
+							<h3 class="team-list__header">Игорь Демьяненко</h3>
+							<p class="team-list__text">Product Designer</p>
+						</div>
+					</li>
+					<li class="team-list__item">
+						<img src="./images/index/Olga.jpg" class="team-list__img" width="270" alt="woman">
+						<div class="team-list__wrapper">
+							<h3 class="team-list__header">Ольга Репина</h3>
+							<p class="team-list__text">Frontend Developer</p>
+						</div>
+					</li>
+					<li class="team-list__item">
+						<img src="./images/index/Nikolai.jpg" class="team-list__img" width="270" alt="man">
+						<div class="team-list__wrapper">
+							<h3 class="team-list__header">Николай Тарасов</h3>
+							<p class="team-list__text">Marketing</p>
+						</div>
+					</li>
+					<li class="team-list__item">
+						<img src="./images/index/Mihail.jpg" class="team-list__img" width="270" alt="man">
+						<div class="team-list__wrapper">
+							<h3 class="team-list__header">Михаил Ермаков</h3>
+							<p class="team-list__text">UI Designer</p>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</section>
 	</main>
 	<footer>
-		<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
-		<address>
-			<ul class="address-list list">
-				<li class="address-list__item">
-					<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" class="address-list__link link addr" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
-				</li>
-				<li class="address-list__item">
-					<a href="mailto:info@devstudio.com" class="address-list__link link">info@devstudio.com</a>
-				</li>
-				<li class="address-list__item">
-					<a href="tel:+380961111111" class="address-list__link link"> +38 096 111 11 11</a>
-				</li>
-			</ul>
-		</address>
+		<div class="wrap">
+			<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
+			<address>
+				<ul class="address-list list">
+					<li class="address-list__item">
+						<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" class="address-list__link link addr" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
+					</li>
+					<li class="address-list__item">
+						<a href="mailto:info@devstudio.com" class="address-list__link link">info@devstudio.com</a>
+					</li>
+					<li class="address-list__item">
+						<a href="tel:+380961111111" class="address-list__link link"> +38 096 111 11 11</a>
+					</li>
+				</ul>
+			</address>
+		</div>
 	</footer>
 </body>
 </html>
