--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header>
+	<header class="line">
 		<div class="wrap header-wrap flex-container">
 			<nav class="navigation">
 				<a href="index.html" class="logo link"><span class="logo__first-part">Web</span>Studio</a>
