huge semantic fixes

--- a/index.html
+++ b/index.html
@@ -36,45 +36,51 @@
 			</ul>
 		</div>
 	</header>
-	<section class="hero wrap flex-container">
+	<section class="hero">
+		<div class="wrap flex-container">
 			<h1 class="hero__header">Эффективные решения для вашего бизнеса</h1>
 			<button type="button" class="hero__button">Заказать услугу</button>
+		</div>
 	</section>
 	<main>
-		<section class="principles wrap">
-			<h2 class="principles__header primary-header">Наши принципы</h2><!--скрытый заголовок-->
-			<ul class="principles-list list flex-container">
-				<li class="principles-list__item">
-					<h3 class="principles__secondary-header">Внимание к деталям</h3>
-					<p class="principles__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-				</li>
-				<li class="principles-list__item">
-					<h3 class="principles__secondary-header">Пунктуальность</h3>
-					<p class="principles__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-				</li>
-				<li class="principles-list__item">
-					<h3 class="principles__secondary-header">Планирование</h3>
-					<p class="principles__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-				</li>
-				<li class="principles-list__item">
-					<h3 class="principles__secondary-header">Современные технологии</h3>
-					<p class="principles__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-				</li>
-			</ul>
+		<section class="principles">
+			<div class="wrap">
+				<h2 class="principles__header primary-header">Наши принципы</h2><!--скрытый заголовок-->
+				<ul class="principles-list list flex-container">
+					<li class="principles-list__item">
+						<h3 class="principles__secondary-header">Внимание к деталям</h3>
+						<p class="principles__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+					</li>
+					<li class="principles-list__item">
+						<h3 class="principles__secondary-header">Пунктуальность</h3>
+						<p class="principles__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+					</li>
+					<li class="principles-list__item">
+						<h3 class="principles__secondary-header">Планирование</h3>
+						<p class="principles__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					</li>
+					<li class="principles-list__item">
+						<h3 class="principles__secondary-header">Современные технологии</h3>
+						<p class="principles__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					</li>
+				</ul>
+			</div>
 		</section>
-		<section class="about wrap">
-			<h2 class="primary-header">Чем мы занимаемся</h2>
-			<ul class="img-list list flex-container">
-				<li class="img-list__item"> 
-					<img src="./images/index/img1.jpg" class="img-list__img" width="370" alt="coding">
-				</li>
-				<li class="img-list__item">
-					<img src="./images/index/img2.jpg" class="img-list__img" width="370" alt="mobile development">
-				</li>
-				<li class="img-list__item">
-					<img src="./images/index/img3.jpg" class="img-list__img" width="370" alt="tablet development">
-				</li>
-			</ul>
+		<section class="about">
+			<div class="wrap">
+				<h2 class="primary-header">Чем мы занимаемся</h2>
+				<ul class="img-list list flex-container">
+					<li class="img-list__item"> 
+						<img src="./images/index/img1.jpg" class="img-list__img" width="370" alt="coding">
+					</li>
+					<li class="img-list__item">
+						<img src="./images/index/img2.jpg" class="img-list__img" width="370" alt="mobile development">
+					</li>
+					<li class="img-list__item">
+						<img src="./images/index/img3.jpg" class="img-list__img" width="370" alt="tablet development">
+					</li>
+				</ul>
+			</div>	
 		</section>
 		<section class="team">
 			<div class="team-list-wrap wrap">
