--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header class="line">
+	<header>
 		<div class="wrap header-wrap flex-container">
 			<nav class="navigation">
 				<a href="index.html" class="logo link"><span class="logo__first-part">Web</span>Studio</a>
@@ -37,89 +37,129 @@
 		</div>
 	</header>
 	<main>
-		<section class="main-section">
-			<h1 class="main-section__header">Наши проекты</h1><!--скрытый заголовок-->
-			<ul class="filter-list list">
-				<li class="filter-list__item">
-					<button type="button" class="filter-list__button">Все</button>
-				</li>
-				<li class="filter-list__item">
-					<button type="button" class="filter-list__button">Веб-сайты</button>
-				</li>
-				<li class="filter-list__item">
-					<button type="button" class="filter-list__button">Приложения</button>
-				</li>
-				<li class="filter-list__item">
-					<button type="button" class="filter-list__button">Дизайн</button>
-				</li>
-				<li class="filter-list__item">
-					<button type="button" class="filter-list__button">Маркетинг</button>
-				</li>
-			</ul>
-			<ul class="projects-list list">
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img1.jpg" width="370" alt="laptop">
-					<h2 class="projects-list__header">Технокряк</h2>
-					<p class="projects-list__text">Веб-сайт</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img2.jpg" width="370" alt="basketball">
-					<h2 class="projects-list__header">Постер New Orlean vs Golden Star</h2>
-					<p class="projects-list__text">Дизайн</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img3.jpg" width="370" alt="restaurant_logo">
-					<h2 class="projects-list__header">Ресторан Seafood</h2>
-					<p class="projects-list__text">Приложение</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img4.jpg" width="370" alt="headphones">
-					<h2 class="projects-list__header">Проект Prime</h2>
-					<p class="projects-list__text">Маркетинг</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img5.jpg" width="370" alt="boxes">
-					<h2 class="projects-list__header">Проект Boxes</h2>
-					<p class="projects-list__text">Приложение</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img6.jpg" width="370" alt="monitor">
-					<h2 class="projects-list__header">Inspiration has no Borders</h2>
-					<p class="projects-list__text">Веб-сайт</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img7.jpg" width="370" alt="book">
-					<h2 class="projects-list__header">Издание Limited Edition</h2>
-					<p class="projects-list__text">Дизайн</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img8.jpg" width="370" alt="label">
-					<h2 class="projects-list__header">Проект LAB</h2>
-					<p class="projects-list__text">Маркетинг</p>
-				</li>
-				<li class="projects-list__item">
-					<img src="./images/portfolio/img9.jpg" width="370" alt="laptop">
-					<h2 class="projects-list__header">Growing Business</h2>
-					<p class="projects-list__text">Приложение</p>
-				</li>
-			</ul>
+		<section class="projects">
+			<div class="wrap">
+				<h1 class="projects__header">Наши проекты</h1><!--скрытый заголовок-->
+				<ul class="filter-list list flex-container">
+					<li class="filter-list__item">
+						<button type="button" class="filter-list__button">Все</button>
+					</li>
+					<li class="filter-list__item">
+						<button type="button" class="filter-list__button">Веб-сайты</button>
+					</li>
+					<li class="filter-list__item">
+						<button type="button" class="filter-list__button">Приложения</button>
+					</li>
+					<li class="filter-list__item">
+						<button type="button" class="filter-list__button">Дизайн</button>
+					</li>
+					<li class="filter-list__item">
+						<button type="button" class="filter-list__button">Маркетинг</button>
+					</li>
+				</ul>
+				<ul class="projects-list list flex-container">
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img1.jpg" width="370" alt="laptop">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Технокряк</h2>
+								<p class="projects-list__text">Веб-сайт</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img2.jpg" width="370" alt="basketball">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Постер New Orlean vs Golden Star</h2>
+								<p class="projects-list__text">Дизайн</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img3.jpg" width="370" alt="restaurant_logo">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Ресторан Seafood</h2>
+								<p class="projects-list__text">Приложение</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img4.jpg" width="370" alt="headphones">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Проект Prime</h2>
+								<p class="projects-list__text">Маркетинг</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img5.jpg" width="370" alt="boxes">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Проект Boxes</h2>
+								<p class="projects-list__text">Приложение</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img6.jpg" width="370" alt="monitor">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Inspiration has no Borders</h2>
+								<p class="projects-list__text">Веб-сайт</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img7.jpg" width="370" alt="book">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Издание Limited Edition</h2>
+								<p class="projects-list__text">Дизайн</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img8.jpg" width="370" alt="label">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Проект LAB</h2>
+								<p class="projects-list__text">Маркетинг</p>
+							</div>
+						</a>
+					</li>
+					<li class="projects-list__item">
+						<a href="#" class="projects-list__link link">
+							<img src="./images/portfolio/img9.jpg" width="370" alt="laptop">
+							<div class="projects__wrapper">
+								<h2 class="projects-list__header">Growing Business</h2>
+								<p class="projects-list__text">Приложение</p>
+							</div>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</section>
 	</main>
 	<footer>
-		<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
-		<address>
-			<ul class="address-list list">
-				<li class="address-list__item">
-					<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" class="address-list__link link addr" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
-				</li>
-				<li class="address-list__item">
-					<a href="mailto:info@devstudio.com" class="address-list__link link">info@devstudio.com</a>
-				</li>
-				<li class="address-list__item">
-					<a href="tel:+380961111111" class="address-list__link link"> +38 096 111 11 11</a>
-				</li>
-			</ul>
-		</address>
+		<div class="wrap">
+			<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
+			<address>
+				<ul class="address-list list">
+					<li class="address-list__item">
+						<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" class="address-list__link link addr" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
+					</li>
+					<li class="address-list__item">
+						<a href="mailto:info@devstudio.com" class="address-list__link link">info@devstudio.com</a>
+					</li>
+					<li class="address-list__item">
+						<a href="tel:+380961111111" class="address-list__link link"> +38 096 111 11 11</a>
+					</li>
+				</ul>
+			</address>
+		</div>
 	</footer>
 </body>
 </html>
