--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 				<h2 class="primary-header">Чем мы занимаемся</h2>
 				<ul class="img-list list flex-container">
 					<li class="img-list__item"> 
-						<img src="./images/index/img1.jpg" class="img-list__img" width="370" alt="coding">
+						<img src="./images/index/img1.jpg" class="img-list__img" alt="coding">
 					</li>
 					<li class="img-list__item">
-						<img src="./images/index/img2.jpg" class="img-list__img" width="370" alt="mobile development">
+						<img src="./images/index/img2.jpg" class="img-list__img" alt="mobile development">
 					</li>
 					<li class="img-list__item">
-						<img src="./images/index/img3.jpg" class="img-list__img" width="370" alt="tablet development">
+						<img src="./images/index/img3.jpg" class="img-list__img" alt="tablet development">
 					</li>
 				</ul>
 			</div>	
@@ -87,28 +87,28 @@
 				<h2 class="primary-header">Наша команда</h2>
 				<ul class="team-list list flex-container">
 					<li class="team-list__item">
-						<img src="./images/index/Igor.jpg" class="team-list__img" width="270" alt="man">
+						<img src="./images/index/Igor.jpg" class="team-list__img" alt="man">
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Игорь Демьяненко</h3>
 							<p class="team-list__text">Product Designer</p>
 						</div>
 					</li>
 					<li class="team-list__item">
-						<img src="./images/index/Olga.jpg" class="team-list__img" width="270" alt="woman">
+						<img src="./images/index/Olga.jpg" class="team-list__img" alt="woman">
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Ольга Репина</h3>
 							<p class="team-list__text">Frontend Developer</p>
 						</div>
 					</li>
 					<li class="team-list__item">
-						<img src="./images/index/Nikolai.jpg" class="team-list__img" width="270" alt="man">
+						<img src="./images/index/Nikolai.jpg" class="team-list__img" alt="man">
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Николай Тарасов</h3>
 							<p class="team-list__text">Marketing</p>
 						</div>
 					</li>
 					<li class="team-list__item">
-						<img src="./images/index/Mihail.jpg" class="team-list__img" width="270" alt="man">
+						<img src="./images/index/Mihail.jpg" class="team-list__img" alt="man">
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Михаил Ермаков</h3>
 							<p class="team-list__text">UI Designer</p>
