--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 				<ul class="projects-list list flex-container">
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img1.jpg" width="370" alt="laptop">
+							<img src="./images/portfolio/img1.jpg" alt="laptop">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Технокряк</h2>
 								<p class="projects-list__text">Веб-сайт</p>
@@ -69,7 +69,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img2.jpg" width="370" alt="basketball">
+							<img src="./images/portfolio/img2.jpg" alt="basketball">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Постер New Orlean vs Golden Star</h2>
 								<p class="projects-list__text">Дизайн</p>
@@ -78,7 +78,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img3.jpg" width="370" alt="restaurant_logo">
+							<img src="./images/portfolio/img3.jpg" alt="restaurant_logo">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Ресторан Seafood</h2>
 								<p class="projects-list__text">Приложение</p>
@@ -87,7 +87,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img4.jpg" width="370" alt="headphones">
+							<img src="./images/portfolio/img4.jpg" alt="headphones">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Проект Prime</h2>
 								<p class="projects-list__text">Маркетинг</p>
@@ -96,7 +96,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img5.jpg" width="370" alt="boxes">
+							<img src="./images/portfolio/img5.jpg" alt="boxes">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Проект Boxes</h2>
 								<p class="projects-list__text">Приложение</p>
@@ -105,7 +105,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img6.jpg" width="370" alt="monitor">
+							<img src="./images/portfolio/img6.jpg" alt="monitor">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Inspiration has no Borders</h2>
 								<p class="projects-list__text">Веб-сайт</p>
@@ -114,7 +114,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img7.jpg" width="370" alt="book">
+							<img src="./images/portfolio/img7.jpg" alt="book">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Издание Limited Edition</h2>
 								<p class="projects-list__text">Дизайн</p>
@@ -123,7 +123,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img8.jpg" width="370" alt="label">
+							<img src="./images/portfolio/img8.jpg" alt="label">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Проект LAB</h2>
 								<p class="projects-list__text">Маркетинг</p>
@@ -132,7 +132,7 @@
 					</li>
 					<li class="projects-list__item">
 						<a href="#" class="projects-list__link link">
-							<img src="./images/portfolio/img9.jpg" width="370" alt="laptop">
+							<img src="./images/portfolio/img9.jpg" alt="laptop">
 							<div class="projects__wrapper">
 								<h2 class="projects-list__header">Growing Business</h2>
 								<p class="projects-list__text">Приложение</p>
