--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 		</div>
 	</header>
 	<section class="hero">
-		<div class="wrap flex-container">
-			<h1 class="hero__header">Эффективные решения для вашего бизнеса</h1>
-			<button type="button" class="hero__button">Заказать услугу</button>
+		<div class="hero-bg-wrap">
+			<div class="wrap flex-container">
+				<h1 class="hero__header">Эффективные решения для вашего бизнеса</h1>
+				<button type="button" class="hero__button">Заказать услугу</button>
+			</div>
 		</div>
 	</section>
 	<main>
