--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
 			</nav>
 			<ul class="header-contacts list">
 				<li class="header-contacts__item">
-					<svg class="header-contacts__icon envelope">
-						<use href="images/sprite.svg#envelope"></use>
-					</svg>
-					<a href="mailto:info@devstudio.com" class="header-contacts__link link">info@devstudio.com</a>
+					<a href="mailto:info@devstudio.com" class="header-contacts__link link">
+						<svg class="header-contacts__icon envelope">
+							<use href="images/sprite.svg#envelope"></use>
+						</svg>
+					info@devstudio.com</a>
 				</li>
 				<li class="header-contacts__item">
-					<svg class="header-contacts__icon smartphone">
-						<use href="images/sprite.svg#smartphone"></use>
-					</svg>
-					<a href="tel:+380961111111" class="header-contacts__link link"> +38 096 111 11 11</a>
+					<a href="tel:+380961111111" class="header-contacts__link link">
+						<svg class="header-contacts__icon smartphone" width="10" height="16">
+							<use href="images/sprite.svg#smartphone"></use>
+						</svg>
+					 +38 096 111 11 11</a>
 				</li>
 			</ul>
 		</div>
