--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</li>
 				<li class="header-contacts__item">
 					<a href="tel:+380961111111" class="header-contacts__link link">
-						<svg class="header-contacts__icon smartphone" width="10" height="16">
+						<svg class="header-contacts__icon smartphone">
 							<use href="images/sprite.svg#smartphone"></use>
 						</svg>
 					 +38 096 111 11 11</a>
