--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 				<li class="header-contacts__item">
 					<a href="mailto:info@devstudio.com" class="header-contacts__link link">
 						<svg class="header-contacts__icon envelope">
-							<use href="images/sprite.svg#icon-envelope"></use>
+							<use href="images/sprite.svg#icon-envelope" width="16px" height="12px"></use>
 						</svg>
 					info@devstudio.com</a>
 				</li>
 				<li class="header-contacts__item">
 					<a href="tel:+380961111111" class="header-contacts__link link">
-						<svg class="header-contacts__icon smartphone">
+						<svg class="header-contacts__icon smartphone" width="10" height="16">
 							<use href="images/sprite.svg#icon-smartphone"></use>
 						</svg>
 					 +38 096 111 11 11</a>
