replaced height width

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<ul class="header-contacts list">
 				<li class="header-contacts__item">
 					<a href="mailto:info@devstudio.com" class="header-contacts__link link">
-						<svg class="header-contacts__icon envelope">
-							<use href="images/sprite.svg#icon-envelope" width="16px" height="12px"></use>
+						<svg class="header-contacts__icon envelope" width="16px" height="12px">
+							<use href="images/sprite.svg#icon-envelope"></use>
 						</svg>
 					info@devstudio.com</a>
 				</li>
