--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 			<ul class="header-contacts list">
 				<li class="header-contacts__item">
 					<a href="mailto:info@devstudio.com" class="header-contacts__link link">
-						<svg class="header-contacts__icon envelope" width="16px" height="12px">
+						<svg class="header-contacts__icon" width="16px" height="12px">
 							<use href="images/sprite.svg#icon-envelope"></use>
 						</svg>
 					info@devstudio.com</a>
 				</li>
 				<li class="header-contacts__item">
 					<a href="tel:+380961111111" class="header-contacts__link link">
-						<svg class="header-contacts__icon smartphone" width="10" height="16">
+						<svg class="header-contacts__icon" width="10" height="16">
 							<use href="images/sprite.svg#icon-smartphone"></use>
 						</svg>
 					 +38 096 111 11 11</a>
@@ -58,18 +58,38 @@
 				<h2 class="principles__header primary-header">Наши принципы</h2><!--скрытый заголовок-->
 				<ul class="principles-list list flex-container">
 					<li class="principles-list__item">
+						<div class="principles-icon__container">
+							<svg class="principles__icon" width="70" height="70">
+								<use href="images/sprite.svg#icon-antenna"></use>
+							</svg>
+						</div>
 						<h3 class="principles__secondary-header">Внимание к деталям</h3>
 						<p class="principles__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 					<li class="principles-list__item">
+						<div class="principles-icon__container">
+							<svg class="principles__icon" width="70" height="70">
+								<use href="images/sprite.svg#icon-clock"></use>
+							</svg>
+						</div>
 						<h3 class="principles__secondary-header">Пунктуальность</h3>
 						<p class="principles__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 					</li>
 					<li class="principles-list__item">
+						<div class="principles-icon__container">
+							<svg class="principles__icon" width="70" height="70">
+								<use href="images/sprite.svg#icon-diagram"></use>
+							</svg>
+						</div>
 						<h3 class="principles__secondary-header">Планирование</h3>
 						<p class="principles__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 					</li>
 					<li class="principles-list__item">
+						<div class="principles-icon__container">
+							<svg class="principles__icon" width="70" height="70">
+								<use href="images/sprite.svg#icon-astronaut"></use>
+							</svg>
+						</div>
 						<h3 class="principles__secondary-header">Современные технологии</h3>
 						<p class="principles__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 					</li>
