added team icons

--- a/index.html
+++ b/index.html
@@ -121,6 +121,36 @@
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Игорь Демьяненко</h3>
 							<p class="team-list__text">Product Designer</p>
+							<ul class="team__social-container list">
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 					<li class="team-list__item">
@@ -128,6 +158,36 @@
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Ольга Репина</h3>
 							<p class="team-list__text">Frontend Developer</p>
+							<ul class="team__social-container list">
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 					<li class="team-list__item">
@@ -135,6 +195,36 @@
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Николай Тарасов</h3>
 							<p class="team-list__text">Marketing</p>
+							<ul class="team__social-container list">
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 					<li class="team-list__item">
@@ -142,6 +232,36 @@
 						<div class="team-list__wrapper">
 							<h3 class="team-list__header">Михаил Ермаков</h3>
 							<p class="team-list__text">UI Designer</p>
+							<ul class="team__social-container list">
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-container__item">
+									<a href="#" class="link">
+										<svg class="social-container__icon" width="20" height="20">
+											<use href="images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 				</ul>
