--- a/index.html
+++ b/index.html
@@ -234,28 +234,28 @@
 							<p class="team-list__text">UI Designer</p>
 							<ul class="team__social-container list">
 								<li class="social-container__item">
-									<a href="#" class="link">
+									<a href="#" class="social-container__link link">
 										<svg class="social-container__icon" width="20" height="20">
 											<use href="images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social-container__item">
-									<a href="#" class="link">
+									<a href="#" class="social-container__link link">
 										<svg class="social-container__icon" width="20" height="20">
 											<use href="images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social-container__item">
-									<a href="#" class="link">
+									<a href="#" class="social-container__link link">
 										<svg class="social-container__icon" width="20" height="20">
 											<use href="images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social-container__item">
-									<a href="#" class="link">
+									<a href="#" class="social-container__link link">
 										<svg class="social-container__icon" width="20" height="20">
 											<use href="images/sprite.svg#icon-linkedin"></use>
 										</svg>
