--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<main>
 		<section class="principles">
 			<div class="wrap">
-				<h2 class="principles__header primary-header">Наши принципы</h2><!--скрытый заголовок-->
+				<h2 class="primary-header visually-hidden">Наши принципы</h2><!--скрытый заголовок-->
 				<ul class="principles-list list flex-container">
 					<li class="principles-list__item">
 						<div class="principles-icon__container">
