--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 	<main>
 		<section class="projects">
 			<div class="wrap">
-				<h1 class="projects__header">Наши проекты</h1><!--скрытый заголовок-->
+				<h1 class=".visually-hidden">Наши проекты</h1><!--скрытый заголовок-->
 				<ul class="filter-list list flex-container">
 					<li class="filter-list__item">
 						<button type="button" class="filter-list__button">Все</button>
